jdk17 agent and bump maven-shade-plugin